# HyperChat

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.VSCodeCounter/2025-07-01_16-58-23/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-04_15-54-03/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-04_15-54-40/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-04_15-55-03/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-04_15-55-12/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-17_22-32-37/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-17_22-32-55/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2025-07-17_22-33-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-17_22-33-25/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-17_22-33-34/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-08-07_17-50-47/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Benchmark/: BenchmarkLog.hpp  BenchmarkSerializer.hpp  CMakeLists.txt  LogBenchmarkTest.cpp  RunBenchmark.cpp
ChatClient/: CmakeLists.txt  RunClient.cpp  chatclient.cpp  chatclient.h  chatservicestub.cpp  chatservicestub.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocolresponsehandler.cpp  protocolresponsehandler.h  resources.qrc  spinner.cpp  spinner.h
ChatClient/include/: ChatClient.h
ChatClient/src/: ChatClient.cpp
ChatServer/: CmakeLists.txt  RunServer.cpp
ChatServer/entity/: ChatRoom.h  User.hpp
ChatServer/include/: AsyncTcpServer.h  ChatServer.h  ChatService.h  Configuration.hpp  Globals.hpp  IoContextPool.h  SQLExecuser.h  SQLiteConnectionPool.h  Session.h
ChatServer/include/entity/: User.h
ChatServer/src/: AsyncTcpServer.cpp  ChatServer.cpp  ChatService.cpp  IoContextPool.cpp  SQLExecuser.cpp  SQLiteConnectionPool.cpp  Session.cpp
ChatServer/utils/: IdGenerator.hpp
Common/: CMakeLists.txt
Common/include/: Connection.h  Dto.hpp  Logger.h  Protocol.h  ProtocolMessage.h  Semaphore.h  Serializer.hpp  Session.h  Singleton.h  SpinLock.h  ThreadPool.h  Timer.h  Timestamp.h  UncopybleAndUnmovable.h  Utils.hpp
Common/src/: Connection.cpp  Logger.cpp  Protocol.cpp  ProtocolMessage.cpp  Semaphore.cpp  Session.cpp  Spinlock.cpp  ThreadPool.cpp  Timer.cpp  Timestamp.cpp
UnitTest/: CMakeLists.txt  RunTest.cpp
UnitTest/TestCommon/: TestLog.hpp  TestProtocol.hpp  TestSerializer.hpp  TestThreadPool.hpp  TestTimer.hpp
UnitTest/TestServer/: TestAsyncTcpServer.hpp  TestChatServer.hpp  TestChatService.hpp  TestIoContextPool.hpp
app/: RunClient.cpp  RunServer.cpp
include/: ChatServerCore.h
include/ChatClient/: ChatClientCore.h
include/ChatServer/: ChatServerCore.h
include/Common/: CMakeLists.txt  Logger.hpp  Semaphore.hpp  SpinLock.hpp  ThreadPool.hpp  Timestamp.hpp
src/: ChatServerCore.cpp  main.cpp
src/ChatClient/: ChatClientCore.cpp
src/ChatServer/: ChatServerCore.cpp
